--- a/appsettings.json
+++ b/appsettings.json
@@ -7,6 +7,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "TechAlertDbContext": "Server=localhost;Database=RetailTrader;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "TechAlertDbContext": "Server=localhost;Database=TechnicalAnalysis;Trusted_Connection=True;MultipleActiveResultSets=true"
   }
 }
