--- a/TechAnalysis.API.csproj
+++ b/TechAnalysis.API.csproj
@@ -7,6 +7,14 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Compile Remove="Controllers\DataController.cs" />
+    <Compile Remove="Controllers\InstrumentController.cs" />
+    <Compile Remove="Service\IPriceService.cs" />
+    <Compile Remove="Service\MockPriceService.cs" />
+    <Compile Remove="Service\PriceService.cs" />
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="6.0.1" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="6.0.1" />
     <PackageReference Include="RabbitMQ.Client" Version="6.2.2" />
